fixed footer behaviour, fixed nav collapse, deleted static bootstrap and js jquery and bootstrap files.

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,24 @@
 /*Date: Octuber 03, 2021 */
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 0 auto; 
+  padding: 20px;
+}
+
+.footer{
+  margin-top: 5px;
+    position: relative;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    flex-shrink: 0; 
+}
 
 .logoSize {
     height: 100%;
@@ -155,7 +175,6 @@
     width: 34rem;
     text-align: center;
     background-color: #fff;
-    background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: 0.25rem;
     transition: all 0.5s ease-out;
@@ -251,9 +270,8 @@
     align-content: center;
 }
 
-.footer{
- position: fixed;
-}
+
+
 
 .footer-link {
 color:white;
